/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package org.apache.flink.test;
option java_package = "org.apache.flink.statefun.flink.core.protorouter.generated";
option java_multiple_files = false;
option java_outer_classname = "TestProtos";

import "google/protobuf/any.proto";

message SimpleMessage {
    string name = 1;
}

message RepeatedMessage {
    repeated SimpleMessage simple_message = 2;
}

message NestedMessage {
    message Foo {
        string name = 1;    
    }
    
    Foo foo = 1;
}

enum Letter {
    A = 0;
    B = 1;
    C = 2;
}

message MessageWithEnum {
    Letter letter = 1;
}

message ImportedMessage {
    google.protobuf.Any imported = 2;
}

message OneOfMessage {
   
    oneof payload {
        string foo = 1;
        int64 bar = 2;
        float baz = 3;
    }
}

